[gd_scene load_steps=9 format=2]

[ext_resource path="res://Enemies/Frog/SpriteSheet.png" type="Texture" id=1]
[ext_resource path="res://Enemies/Frog/SpriteSheet_n.png" type="Texture" id=2]
[ext_resource path="res://Enemies/Frog/Frog.gd" type="Script" id=3]
[ext_resource path="res://Player/Dust.tres" type="Gradient" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 22.7045, 17.6698 )

[sub_resource type="Animation" id=2]
resource_name = "Idle"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Move"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Squished"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 2 ]
}

[node name="Frog" type="KinematicBody2D" groups=[
"Enemies",
]]
collision_layer = 4
collision_mask = 3
script = ExtResource( 3 )
speed = 50
gravity = 750
jump_str = -450

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
normal_map = ExtResource( 2 )
hframes = 4
frame = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.68176, -6.30672 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 2 )
anims/Move = SubResource( 3 )
anims/Squished = SubResource( 4 )

[node name="CastRight" type="RayCast2D" parent="."]
cast_to = Vector2( 55, 35 )

[node name="CastLeft" type="RayCast2D" parent="."]
cast_to = Vector2( -55, 35 )

[node name="Dust" type="CPUParticles2D" parent="."]
position = Vector2( -0.420441, 14.2952 )
emitting = false
amount = 40
lifetime = 0.45
one_shot = true
speed_scale = 2.0
explosiveness = 0.7
local_coords = false
emission_shape = 2
emission_rect_extents = Vector2( 40, 1 )
gravity = Vector2( 0, 0 )
initial_velocity = 50.0
initial_velocity_random = 1.0
scale_amount = 3.0
scale_amount_random = 1.0
color_ramp = ExtResource( 4 )

[node name="Timer" type="Timer" parent="."]
one_shot = true
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
